# meshseer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.es.md  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  deployment.md  package-lock.json  package.json  prod_checklist.md  prod_remediation_plan.md  pyproject.toml  start.sh
.github/workflows/: publish-image.yml  tests.yml
deploy/proxmox/: README.md  cloudflared-config.yml.example  meshseer.env.example  meshseer.service
readmes/: README.es.md
scripts/: headless_capture.py  screenshot.js  screenshot.py
src/meshradar/: __init__.py  app.py  autotrace.py  clock.py  collector.py  config.py  demo.py  events.py  main.py  normalizers.py  public_api.py  startup.py  storage.py
src/meshradar/static/: app.js  index.html  styles.css
src/meshseer/: __init__.py  app.py  audit.py  autotrace.py  channels.py  collector.py  config.py  demo.py  env.py  main.py  models.py  normalizers.py  public_api.py  startup.py  storage.py
src/meshseer/static/: app.js  i18n.js  index.html  styles.css
src/meshseer/static/favicon/: site.webmanifest
tests/: test_api.py  test_audit.py  test_autotrace.py  test_clock.py  test_collector.py  test_config.py  test_demo.py  test_events.py  test_i18n.py  test_main.py  test_normalizers.py  test_startup.py  test_storage.py  test_ui_escape.py
