[project]
name = "meshseer"
version = "0.1.0"
description = "Public Meshtastic mesh view from the perspective of your receiver node"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-only"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "meshtastic>=2.7.0,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "websockets>=15.0.0,<16.0.0",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.0.0,<8.0.0",
  "httpx>=0.28.0,<1.0.0",
  "playwright>=1.58.0,<2.0.0",
  "pytest>=9.0.3,<10.0.0",
]

[project.urls]
Homepage = "https://github.com/JuanMHuerta/meshseer"
Repository = "https://github.com/JuanMHuerta/meshseer"
Issues = "https://github.com/JuanMHuerta/meshseer/issues"

[project.scripts]
meshseer = "meshseer.main:run"
meshseer-demo = "meshseer.demo:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meshseer"]

[tool.coverage.run]
source = ["src/meshseer"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
